<resources>
<<<<<<< HEAD
    <string name="app_name">POCKET</string>
    <string name="n_history">History</string>
    <string name="P">Open user profile</string>
    <string name="R">Open user reward</string>
    <string name="PH">Plus more history</string>
    <string name="home">Open home</string>
    <string name="settings">Open user setting</string>
    <string name="note">Open user note</string>
    <string name="S">Search</string>
    <string name="PD">Pick Date</string>
    <string name="his">History</string>
    <string name="hintgoal">goal today</string>
    <string name="goal">Goal</string>
=======
    <string name="app_name">Cs361v.2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_icon">Icon_user</string>
    <string name="pocket">Pocket</string>
    <string name="ach_icon">achicon</string>
    <string name="history">History</string>
    <string name="goal_text">Goal</string>
    <string name="daily_goal_editText">Daily Goal</string>
    <string name="no_transactions_available">No transactions available</string>
    <string name="add_income">Add income</string>
    <string name="salary">Salary</string>
    <string name="other_income">Other Income</string>
    <string name="transfer_in">Transfer In</string>
    <string name="interest_income">Interest Income</string>
    <string name="food_beverages"><![CDATA[Food & Beverages]]></string>
    <string name="bills_utilities"><![CDATA[Bills & Utilities]]></string>
    <string name="shopping">Shopping</string>
    <string name="family">Family</string>
    <string name="travel">Travel</string>
    <string name="health_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="giving_donations"><![CDATA[Giving & Donations]]></string>
    <string name="insurance">Insurance</string>
    <string name="investment">Investment</string>
    <string name="other_expenses">Other Expenses</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="income">Income</string>
    <string name="outcome">expenses</string>
    <string name="add">Add</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="conclusion">Conclusion</string>
    <string name="search_bill">Search Bill</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="Select_date">Selected date</string>
    <string name="summary_of_expenses">Summary of Expenses</string>
    <string name="loading">Loading...</string>
    <string name="selected_date">Selected Date</string>
    <string name="status_image">Status Image</string>
    <string name="back">Back</string>
    <string name="income_and_expense_summary">Income and Expense Summary</string>
    <string name="total_0_00">Total: 0.00</string>
    <string name="display_data">Display Data</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="years_array">
            <item>2022</item>
            <item>2023</item>
            <item>2024</item>
            <item>2025</item>
        </string-array>
    <string name="Delete_date">Delete date</string>
    <string name="Language">Language</string>
    <string name="Size">Font size</string>
    <string name="backHP">Back To Homepage</string>
    <string name="Settings">Settings</string>
    <string name="choose_lang">Chooe your languege</string>
    <string name="eng_ver">English</string>
    <string name="th_ver">ภาษาไทย</string>
    <string name="choose_font">Font Size</string>
    <string name="s_large">Large</string>
    <string name="s_small">Small</string>
    <string name="s_medium">Medium</string>
    <string name="save_goal">Save Goal</string>

>>>>>>> 4771aee (Pocket Ver3)
</resources>