<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/IDuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_size_small"
                android:clickable="true"
                android:contentDescription="@string/P"
                app:backgroundTint="@color/tone1"
                app:srcCompat="@drawable/user" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/app_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/tone1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/IDreward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_size_small"
                android:layout_weight="1"
                android:clickable="true"
                android:contentDescription="@string/R"
                app:backgroundTint="@color/yellow"
                app:srcCompat="@drawable/star" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_size_small"
        android:gravity="bottom"
        android:orientation="horizontal">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_size_icons"
            android:layout_marginStart="@dimen/text_size_large"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:iconifiedByDefault="false"
            android:inputType="datetime"
            android:queryHint="Search..." />

        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/text_size_large"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/baseline_calendar_month_24"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/PD"
            android:inputType="date"
            android:minHeight="@dimen/text_size_icons"
            android:padding="@dimen/text_size_small" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">


        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_size_large"
            android:layout_marginEnd="@dimen/text_size_large"
            android:background="@drawable/ic_calendar_background"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:theme="@style/CalendarViewCustom"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_large"
            android:text="@string/his" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_size_small"
        android:background="@drawable/ic_enter_goal_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_size_large"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/IDgoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/goal" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_size_small"
                android:background="@drawable/ic_enter_goal_bg"
                android:duplicateParentState="true"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hintgoal"
                android:inputType="number"
                android:minWidth="@dimen/text_size_large"
                android:minHeight="@dimen/text_size_icons"
                android:padding="@dimen/text_size_small" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_large"
            android:text="TextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/text_size_small"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_size_small"
            android:gravity="right"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/text_size_large"
                android:background="@drawable/ic_calendar_background"
                android:clickable="true"
                android:contentDescription="@string/PH"
                app:backgroundTint="@color/tone1"
                app:srcCompat="@drawable/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/note"
                    app:backgroundTint="@color/tone1"
                    app:srcCompat="@drawable/wirte" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/home"
                    app:backgroundTint="@color/tone1"
                    app:srcCompat="@drawable/home" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:contentDescription="@string/settings"
                    app:backgroundTint="@color/tone1"
                    app:srcCompat="@drawable/settings" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <!-- FrameLayout to display fragments -->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation" />

    <!-- Bottom Navigation View fixed at the bottom -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_tab_bar_bg"
        app:menu="@menu/bottom_navigation" />

</RelativeLayout>
>>>>>>> 4771aee (Pocket Ver3)
